feat: add img group 3

--- a/register.html
+++ b/register.html
@@ -87,8 +87,9 @@
           <h1>Regístrate</h1>
           <nav aria-label="breadcrumb" class="banner-breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#">Inicio</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Regístrate</li>
+              <li class="breadcrumb-item"><a href="#"></a></li>
+              <li class="breadcrumb-item active" aria-current="page"></li>
+                <li><img src="/img/blog/register.jpg" alt="" /></li>
             </ol>
           </nav>
         </div>
@@ -115,45 +116,45 @@
             <h3>Crea una cuenta con nosotros</h3>
             <form class="row login_form" action="#/" id="register_form">
               <div class="col-md-12 form-group">
-                <input type="text" class="form-control" id="name" name="name" placeholder="Username"
-                  onfocus="this.placeholder = ''" onblur="this.placeholder = 'Username'">
+                <input type="text" class="form-control" id="name" name="name" placeholder="Usuario"
+                  onfocus="this.placeholder = ''" onblur="this.placeholder = 'Usuario'">
               </div>
               <div class="col-md-12 form-group">
-                <input type="text" class="form-control" id="email" name="email" placeholder="Email Address"
-                  onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address'">
+                <input type="text" class="form-control" id="email" name="email" placeholder="Email"
+                  onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email'">
               </div>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="login_form_inner register_form_inner">
-            <h3>Create an account</h3>
+            <h3>Crea una cuenta</h3>
             <form class="row login_form" action="#/" id="register_form">
               <div class="col-md-12 form-group">
-                <input type="text" class="form-control" id="name" name="name" placeholder="Username"
-                  onfocus="this.placeholder = ''" onblur="this.placeholder = 'Username'" />
+                <input type="text" class="form-control" id="name" name="name" placeholder="Usuario"
+                  onfocus="this.placeholder = ''" onblur="this.placeholder = 'Usuario'" />
               </div>
               <div class="col-md-12 form-group">
-                <input type="text" class="form-control" id="email" name="email" placeholder="Email Address"
-                  onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address'" />
+                <input type="text" class="form-control" id="email" name="email" placeholder="Email"
+                  onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email'" />
               </div>
               <div class="col-md-12 form-group">
-                <input type="text" class="form-control" id="password" name="password" placeholder="Password"
-                  onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'" />
+                <input type="text" class="form-control" id="password" name="contraseña" placeholder="contraseña"
+                  onfocus="this.placeholder = ''" onblur="this.placeholder = 'contraseña'" />
               </div>
               <div class="col-md-12 form-group">
-                <input type="text" class="form-control" id="confirmPassword" name="confirmPassword"
-                  placeholder="Confirm Password" onfocus="this.placeholder = ''"
-                  onblur="this.placeholder = 'Confirm Password'" />
+                <input type="text" class="form-control" id="confirmPassword" name="Confirmar contraseña"
+                  placeholder="Confirmar contraseña" onfocus="this.placeholder = ''"
+                  onblur="this.placeholder = 'Confirmar contraseña'" />
               </div>
               <div class="col-md-12 form-group">
                 <div class="creat_account">
                   <input type="checkbox" id="f-option2" name="selector" />
-                  <label for="f-option2">Keep me logged in</label>
+                  <label for="f-option2">No cerrar la cuenta </label>
                 </div>
               </div>
               <div class="col-md-12 form-group">
                 <button type="submit" value="submit" class="button button-register w-100">
-                  Register
+                  Regístrate
                 </button>
               </div>
             </form>
@@ -173,13 +174,10 @@
             <div class="single-footer-widget tp_widgets">
               <h4 class="footer_title large_title">Nuestra Misión</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Recusandae mollitia quidem laboriosam quod doloribus nihil
-                molestias inventore veritatis consequatur eveniet, vitae iste!
+                Los mejores productos a los mejores precios, es nuestro lema y todo en solo 48 horas!
               </p>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Architecto, expedita?
+                Obten las mejores ofertas siempre
               </p>
             </div>
           </div>
