--- a/single-product.html
+++ b/single-product.html
@@ -83,11 +83,12 @@
     <div class="container h-100">
       <div class="blog-banner">
         <div class="text-center">
-          <h1>Comprar productos</h1>
+          <h1>Novedades de producto</h1>
           <nav aria-label="breadcrumb" class="banner-breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#">Inicio</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Comprar productos</li>
+              <li class="breadcrumb-item"><a href="#"></a></li>
+              <li class="breadcrumb-item active" aria-current="page"></li>
+              <li><img src="/img/blog/main-blog/m-blog-4.jpg" alt="" /></li>
             </ol>
           </nav>
         </div>
@@ -172,19 +173,19 @@
       <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item">
           <a class="nav-link" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
-            aria-selected="true">Description</a>
+            aria-selected="true">Descripción</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
-            aria-selected="false">Specification</a>
+            aria-selected="false">Características</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact"
-            aria-selected="false">Comments</a>
+            aria-selected="false">Comentarios</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" id="review-tab" data-toggle="tab" href="#review" role="tab" aria-controls="review"
-            aria-selected="false">Reviews</a>
+            aria-selected="false">Opiniones</a>
         </li>
       </ul>
       <div class="tab-content" id="myTabContent">
@@ -307,10 +308,7 @@
                     </div>
                   </div>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo
+                    Compré este reloj y me encanta.  Lo recomendaría al 100%.  
                   </p>
                 </div>
                 <div class="review_item reply">
@@ -319,16 +317,13 @@
                       <img src="img/product/review-2.png" alt="" />
                     </div>
                     <div class="media-body">
-                      <h4>Blake Ruiz</h4>
+                      <h4>Mark Arias</h4>
                       <h5>12th Feb, 2018 at 05:56 pm</h5>
                       <a class="reply_btn" href="#">Reply</a>
                     </div>
                   </div>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo
+                   Me gustaron mucho las funcionalidades del reloj y sobretodo el precio.  Buena relación calidad-precio
                   </p>
                 </div>
                 <div class="review_item">
@@ -337,16 +332,13 @@
                       <img src="img/product/review-3.png" alt="" />
                     </div>
                     <div class="media-body">
-                      <h4>Blake Ruiz</h4>
+                      <h4>Dorian Grey</h4>
                       <h5>12th Feb, 2018 at 05:56 pm</h5>
                       <a class="reply_btn" href="#">Reply</a>
                     </div>
                   </div>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo
+                    Me encantan los relojes, este reloj no está hecho en México pero es de buena calidad.  También me gustó mucho la facilidad de compra de esta página web. 
                   </p>
                 </div>
               </div>
@@ -393,14 +385,14 @@
               <div class="row total_rate">
                 <div class="col-6">
                   <div class="box_total">
-                    <h5>Overall</h5>
+                    <h5>Puntuación</h5>
                     <h4>4.0</h4>
-                    <h6>(03 Reviews)</h6>
+                    <h6>3 Opiniones</h6>
                   </div>
                 </div>
                 <div class="col-6">
                   <div class="rating_list">
-                    <h3>Based on 3 Reviews</h3>
+                    <h3>Basado en tres opiniones</h3>
                     <ul class="list">
                       <li>
                         <a href="#">5 Star <i class="fa fa-star"></i><i class="fa fa-star"></i><i
@@ -433,7 +425,7 @@
                       <img src="img/product/review-1.png" alt="" />
                     </div>
                     <div class="media-body">
-                      <h4>Blake Ruiz</h4>
+                      <h4>Dorian Gray</h4>
                       <i class="fa fa-star"></i>
                       <i class="fa fa-star"></i>
                       <i class="fa fa-star"></i>
@@ -442,10 +434,7 @@
                     </div>
                   </div>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo
+                    Me encantó este -Smartwatch tiene una magnifica relación calidad-precio. 
                   </p>
                 </div>
                 <div class="review_item">
@@ -454,7 +443,7 @@
                       <img src="img/product/review-2.png" alt="" />
                     </div>
                     <div class="media-body">
-                      <h4>Blake Ruiz</h4>
+                      <h4>Llorens Arias</h4>
                       <i class="fa fa-star"></i>
                       <i class="fa fa-star"></i>
                       <i class="fa fa-star"></i>
@@ -463,10 +452,7 @@
                     </div>
                   </div>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo
+                   El reloj es bastante asequible y tiene muy buenas funcionalidades! Lo recomendaría sin dudarlo.
                   </p>
                 </div>
                 <div class="review_item">
@@ -475,7 +461,7 @@
                       <img src="img/product/review-3.png" alt="" />
                     </div>
                     <div class="media-body">
-                      <h4>Blake Ruiz</h4>
+                      <h4>Pedro Infante</h4>
                       <i class="fa fa-star"></i>
                       <i class="fa fa-star"></i>
                       <i class="fa fa-star"></i>
@@ -484,18 +470,15 @@
                     </div>
                   </div>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo
+                   En mis tiempos no había smartwatches como ahora, me lo regaló mi nieto y estoy encantado. 
                   </p>
                 </div>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="review_box">
-                <h4>Add a Review</h4>
-                <p>Your Rating:</p>
+                <h4>Añade una opinión</h4>
+                <p>Dinos un rating:</p>
                 <ul class="list">
                   <li>
                     <a href="#"><i class="fa fa-star"></i></a>
@@ -513,24 +496,24 @@
                     <a href="#"><i class="fa fa-star"></i></a>
                   </li>
                 </ul>
-                <p>Outstanding</p>
+                <p>Excelente</p>
                 <form action="#/" class="form-contact form-review mt-3">
                   <div class="form-group">
-                    <input class="form-control" name="name" type="text" placeholder="Enter your name" required />
+                    <input class="form-control" name="name" type="text" placeholder="Tu nombre" required />
                   </div>
                   <div class="form-group">
-                    <input class="form-control" name="email" type="email" placeholder="Enter email address" required />
+                    <input class="form-control" name="email" type="email" placeholder="Tu email" required />
                   </div>
                   <div class="form-group">
-                    <input class="form-control" name="subject" type="text" placeholder="Enter Subject" />
+                    <input class="form-control" name="subject" type="text" placeholder="Asunto" />
                   </div>
                   <div class="form-group">
                     <textarea class="form-control different-control w-100" name="textarea" id="textarea" cols="30"
-                      rows="5" placeholder="Enter Message"></textarea>
+                      rows="5" placeholder="Mensaje:"></textarea>
                   </div>
                   <div class="form-group text-center text-md-right mt-3">
                     <button type="submit" class="button button--active button-review">
-                      Submit Now
+                      Danos tu opinión
                     </button>
                   </div>
                 </form>
@@ -548,7 +531,7 @@
     <div class="container">
       <div class="section-intro pb-60px">
         <p>Artículo popular en el mercado</p>
-        <h2>Top <span class="section-intro__style">Product</span></h2>
+        <h2>Productos<span class="section-intro__style">Top</span></h2>
       </div>
       <div class="row mt-30">
         <div class="col-sm-6 col-xl-3 mb-4 mb-xl-0">
@@ -668,13 +651,10 @@
             <div class="single-footer-widget tp_widgets">
               <h4 class="footer_title large_title">Nuestra Misión</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Recusandae mollitia quidem laboriosam quod doloribus nihil
-                molestias inventore veritatis consequatur eveniet, vitae iste!
+                Los mejores productos a los mejores precios, es nuestro lema y todo en solo 48 horas!
               </p>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Architecto, expedita?
+                Obten las mejores ofertas siempre
               </p>
             </div>
           </div>
