--- a/tracking-order.html
+++ b/tracking-order.html
@@ -83,22 +83,20 @@
       <div class="container">
         <div class="tracking_box_inner">
           <p>
-            To track your order please enter your Order ID in the box below and
-            press the "Track" button. This was given to you on your receipt and
-            in the confirmation email you should have received.
+            Para seguimiento o tracking de tu pedido, por favor introduce tu número de pedido abajo y pulsa el botón de seguimiento de pedido.  En breve recibirás un correo indicando el status de tu pedido en todo momento. 
           </p>
           <form class="row tracking_form" action="#" method="post" novalidate="novalidate">
             <div class="col-md-12 form-group">
-              <input type="text" class="form-control" id="order" name="order" placeholder="Order ID"
+              <input type="text" class="form-control" id="order" name="order" placeholder="Número de pedido"
                 onfocus="this.placeholder = ''" onblur="this.placeholder = 'Order ID'" />
             </div>
             <div class="col-md-12 form-group">
-              <input type="email" class="form-control" id="email" name="email" placeholder="Billing Email Address"
-                onfocus="this.placeholder = ''" onblur="this.placeholder = 'Billing Email Address'" />
+              <input type="email" class="form-control" id="email" name="email" placeholder="Tu email"
+                onfocus="this.placeholder = ''" onblur="this.placeholder = 'Tu email'" />
             </div>
             <div class="col-md-12 form-group">
               <button type="submit" value="submit" class="button button-tracking">
-                Track Order
+                Seguimiento de pedido
               </button>
             </div>
           </form>
@@ -116,13 +114,10 @@
               <div class="single-footer-widget tp_widgets">
                 <h4 class="footer_title large_title">Nuestra Misión</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Recusandae mollitia quidem laboriosam quod doloribus nihil
-                  molestias inventore veritatis consequatur eveniet, vitae iste!
+                  Los mejores productos a los mejores precios, es nuestro lema y todo en solo 48 horas!
                 </p>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Architecto, expedita?
+                  Obten las mejores ofertas siempre
                 </p>
               </div>
             </div>
