--- a/cart.html
+++ b/cart.html
@@ -333,13 +333,10 @@
             <div class="single-footer-widget tp_widgets">
               <h4 class="footer_title large_title">Nuestra Misión</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Recusandae mollitia quidem laboriosam quod doloribus nihil
-                molestias inventore veritatis consequatur eveniet, vitae iste!
+                Los mejores productos a los mejores precios, es nuestro lema y todo en solo 48 horas!
               </p>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Architecto, expedita?
+                Obten las mejores ofertas siempre
               </p>
             </div>
           </div>
