feat:add traduction grupo2

--- a/confirmation.html
+++ b/confirmation.html
@@ -74,13 +74,13 @@
                   aria-expanded="false">Mi Cuenta</a>
                 <ul class="dropdown-menu">
                   <li class="nav-item">
-                    <a class="nav-link" href="login.html">Login</a>
+                    <a class="nav-link" href="login.html">Acceso</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="register.html">Regístrate</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="tracking-order.html">Tracking</a>
+                    <a class="nav-link" href="tracking-order.html">Seguimiento</a>
                   </li>
                 </ul>
               </li>
@@ -133,19 +133,19 @@
   <section class="order_details section-margin--small">
     <div class="container">
       <p class="text-center billing-alert">
-        Thank you. Your order has been received.
+        Gracias. Tu pedido ha sido recibido.
       </p>
       <div class="row mb-5">
         <div class="col-md-6 col-xl-4 mb-4 mb-xl-0">
           <div class="confirmation-card">
-            <h3 class="billing-title">Order Info</h3>
+            <h3 class="billing-title">Información del Pedido</h3>
             <table class="order-rable">
               <tr>
-                <td>Order number</td>
+                <td>Número de Orden</td>
                 <td>: 60235</td>
               </tr>
               <tr>
-                <td>Date</td>
+                <td>Fecha</td>
                 <td>: Oct 03, 2017</td>
               </tr>
               <tr>
@@ -153,102 +153,102 @@
                 <td>: USD 2210</td>
               </tr>
               <tr>
-                <td>Payment method</td>
-                <td>: Check payments</td>
+                <td>Metodo de Pago</td>
+                <td>: Verificar Pagos</td>
               </tr>
             </table>
           </div>
         </div>
         <div class="col-md-6 col-xl-4 mb-4 mb-xl-0">
           <div class="confirmation-card">
-            <h3 class="billing-title">Billing Address</h3>
+            <h3 class="billing-title">Dirección de Envío</h3>
             <table class="order-rable">
               <tr>
-                <td>Street</td>
-                <td>: 56/8 panthapath</td>
+                <td>Calle</td>
+                <td>: Perú 52</td>
               </tr>
               <tr>
-                <td>City</td>
-                <td>: Dhaka</td>
+                <td>Ciudad</td>
+                <td>:Barcelona</td>
               </tr>
               <tr>
-                <td>Country</td>
-                <td>: Bangladesh</td>
+                <td>País</td>
+                <td>: España</td>
               </tr>
               <tr>
-                <td>Postcode</td>
-                <td>: 1205</td>
+                <td>Código Postal</td>
+                <td>:08018 </td>
               </tr>
             </table>
           </div>
         </div>
         <div class="col-md-6 col-xl-4 mb-4 mb-xl-0">
           <div class="confirmation-card">
-            <h3 class="billing-title">Shipping Address</h3>
+            <h3 class="billing-title">Dirección de Envío</h3>
             <table class="order-rable">
               <tr>
-                <td>Street</td>
-                <td>: 56/8 panthapath</td>
+                <td>Calle</td>
+                <td>: Perú 52</td>
               </tr>
               <tr>
-                <td>City</td>
-                <td>: Dhaka</td>
+                <td>Ciudad</td>
+                <td>:Barcelona</td>
               </tr>
               <tr>
-                <td>Country</td>
-                <td>: Bangladesh</td>
+                <td>País</td>
+                <td>: España</td>
               </tr>
               <tr>
-                <td>Postcode</td>
-                <td>: 1205</td>
+                <td>Código Postal</td>
+                <td>: 08018</td>
               </tr>
             </table>
           </div>
         </div>
       </div>
       <div class="order_details_table">
-        <h2>Order Details</h2>
+        <h2>Detalle del Pedido</h2>
         <div class="table-responsive">
           <table class="table">
             <thead>
               <tr>
-                <th scope="col">Product</th>
-                <th scope="col">Quantity</th>
+                <th scope="col">Producto</th>
+                <th scope="col">Cantidad</th>
                 <th scope="col">Total</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td>
-                  <p>Pixelstore fresh Blackberry</p>
+                  <p>Smartwatch</p>
                 </td>
                 <td>
-                  <h5>x 02</h5>
+                  <h5>x 01</h5>
                 </td>
                 <td>
-                  <p>$720.00</p>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <p>Pixelstore fresh Blackberry</p>
-                </td>
-                <td>
-                  <h5>x 02</h5>
-                </td>
-                <td>
-                  <p>$720.00</p>
+                  <p>16,99€</p>
                 </td>
               </tr>
               <tr>
                 <td>
-                  <p>Pixelstore fresh Blackberry</p>
+                  <p>Zapatillas de Deporte Hombre Runnig</p>
                 </td>
                 <td>
                   <h5>x 02</h5>
                 </td>
                 <td>
-                  <p>$720.00</p>
+                  <p>39,90€</p>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <p>Paleta de Sombra de Ojos</p>
+                </td>
+                <td>
+                  <h5>x 01</h5>
+                </td>
+                <td>
+                  <p>5,50€</p>
                 </td>
               </tr>
               <tr>
@@ -259,18 +259,18 @@
                   <h5></h5>
                 </td>
                 <td>
-                  <p>$2160.00</p>
+                  <p>62,39€</p>
                 </td>
               </tr>
               <tr>
                 <td>
-                  <h4>Shipping</h4>
+                  <h4>Coste de Envío</h4>
                 </td>
                 <td>
                   <h5></h5>
                 </td>
                 <td>
-                  <p>Flat rate: $50.00</p>
+                  <p> 5,00€</p>
                 </td>
               </tr>
               <tr>
@@ -281,7 +281,7 @@
                   <h5></h5>
                 </td>
                 <td>
-                  <h4>$2210.00</h4>
+                  <h4>100€</h4>
                 </td>
               </tr>
             </tbody>
@@ -301,13 +301,12 @@
             <div class="single-footer-widget tp_widgets">
               <h4 class="footer_title large_title">Nuestra Misión</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Recusandae mollitia quidem laboriosam quod doloribus nihil
-                molestias inventore veritatis consequatur eveniet, vitae iste!
+                Estamos comprometidos en mejorar la vida de nuestros clientes, empleados y comunidad.
+                Ofreciendo productos excepcionales a precios atractivos, al mismo tiempo de ser líderes en la forma
+                de hacer negocios socialmente responsables.
               </p>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Architecto, expedita?
+                Ofrecer al cliente el mejor servicio, variedad, calidad y precio.
               </p>
             </div>
           </div>
@@ -326,7 +325,7 @@
           </div>
           <div class="col-lg-2 col-md-6 col-sm-6">
             <div class="single-footer-widget instafeed">
-              <h4 class="footer_title">Galeria</h4>
+              <h4 class="footer_title">Galería</h4>
               <ul class="list instafeed d-flex flex-wrap">
                 <li><img src="img/gallery/r1.jpg" alt="" /></li>
                 <li><img src="img/gallery/r2.jpg" alt="" /></li>
@@ -339,17 +338,17 @@
           </div>
           <div class="offset-lg-1 col-lg-3 col-md-6 col-sm-6">
             <div class="single-footer-widget tp_widgets">
-              <h4 class="footer_title">Contáctanos</h4>
+              <h4 class="footer_title">Ponte En Contacto...</h4>
               <div class="ml-40">
                 <p class="sm-head">
                   <span class="fa fa-location-arrow"></span>
-                  Oficina
+                  Ven a visitarnos
                 </p>
                 <p>C/ del Perú, 52, 08018 Barcelona</p>
 
                 <p class="sm-head">
                   <span class="fa fa-phone"></span>
-                  Teléfono
+                  Llámanos y estaremos encantados de escucharte
                 </p>
                 <p>
                   +123 456 7890 <br />
@@ -358,7 +357,7 @@
 
                 <p class="sm-head">
                   <span class="fa fa-envelope"></span>
-                  Email
+                  Escríbenos
                 </p>
                 <p>
                   free@solo48h.com <br />
