--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Solo48h - Login</title>
+  <title>Solo48h - Accede</title>
   <link rel="icon" href="img/Fevicon.png" type="image/png" />
   <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css" />
   <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css" />
@@ -75,13 +75,13 @@
                   aria-expanded="false">Mi Cuenta</a>
                 <ul class="dropdown-menu">
                   <li class="nav-item">
-                    <a class="nav-link" href="login.html">Login</a>
+                    <a class="nav-link" href="login.html">Accede</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="register.html">Regístrate</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="tracking-order.html">Tracking</a>
+                    <a class="nav-link" href="tracking-order.html">Seguimiento</a>
                   </li>
                 </ul>
               </li>
@@ -115,12 +115,12 @@
     <div class="container h-100">
       <div class="blog-banner">
         <div class="text-center">
-          <h1>Login</h1>
+          <h1>Accede</h1>
           <nav aria-label="breadcrumb" class="banner-breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="#">Inicio</a></li>
               <li class="breadcrumb-item active" aria-current="page">
-                Login
+              Tu cuenta
               </li>
             </ol>
           </nav>
@@ -137,38 +137,38 @@
         <div class="col-lg-6">
           <div class="login_box_img">
             <div class="hover">
-              <h4>New to our website?</h4>
+              <h4>¡Bienvenido/a a Solo48h!</h4>
               <p>
-                There are advances being made in science and technology
-                everyday, and a good example of this is the
+                Un mundo de descuentos te espera, pero primero, introduce una contraseña
+                para completar el registro.
               </p>
-              <a class="button button-account" href="register.html">Create an Account</a>
+              <a class="button button-account" href="register.html">Configura Tu Contraseña</a>
             </div>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="login_form_inner">
-            <h3>Log in to enter</h3>
+            <h3>Iniciar sesión con tu cuenta</h3>
             <form class="row login_form" action="#/" id="contactForm">
               <div class="col-md-12 form-group">
-                <input type="text" class="form-control" id="name" name="name" placeholder="Username"
+                <input type="text" class="form-control" id="name" name="name" placeholder="Usuario"
                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Username'" />
               </div>
               <div class="col-md-12 form-group">
-                <input type="text" class="form-control" id="name" name="name" placeholder="Password"
+                <input type="text" class="form-control" id="name" name="name" placeholder="Contraseña"
                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'" />
               </div>
               <div class="col-md-12 form-group">
                 <div class="creat_account">
                   <input type="checkbox" id="f-option2" name="selector" />
-                  <label for="f-option2">Keep me logged in</label>
+                  <label for="f-option2">¿No tienes una cuenta? Crea una aquí</label>
                 </div>
               </div>
               <div class="col-md-12 form-group">
                 <button type="submit" value="submit" class="button button-login w-100">
-                  Log In
+                  INICIAR SESIÓN
                 </button>
-                <a href="#">Forgot Password?</a>
+                <a href="#">Olvidaste tu contraseña?</a>
               </div>
             </form>
           </div>
@@ -187,13 +187,12 @@
             <div class="single-footer-widget tp_widgets">
               <h4 class="footer_title large_title">Nuestra Misión</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Recusandae mollitia quidem laboriosam quod doloribus nihil
-                molestias inventore veritatis consequatur eveniet, vitae iste!
+                Estamos comprometidos en mejorar la vida de nuestros clientes, empleados y comunidad.
+                Ofreciendo productos excepcionales a precios atractivos, al mismo tiempo de ser líderes en la forma
+                de hacer negocios socialmente responsables.
               </p>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Architecto, expedita?
+             Ofrecer al cliente el mejor servicio, variedad, calidad y precio.
               </p>
             </div>
           </div>
@@ -225,17 +224,17 @@
           </div>
           <div class="offset-lg-1 col-lg-3 col-md-6 col-sm-6">
             <div class="single-footer-widget tp_widgets">
-              <h4 class="footer_title">Contáctanos</h4>
+              <h4 class="footer_title">Ponte En Contacto...</h4>
               <div class="ml-40">
                 <p class="sm-head">
                   <span class="fa fa-location-arrow"></span>
-                  Oficina
+                  Ven a visitarnos
                 </p>
                 <p>C/ del Perú, 52, 08018 Barcelona</p>
 
                 <p class="sm-head">
                   <span class="fa fa-phone"></span>
-                  Teléfono
+                  Llámanos y estaremos encantados de escucharte
                 </p>
                 <p>
                   +123 456 7890 <br />
@@ -244,7 +243,7 @@
 
                 <p class="sm-head">
                   <span class="fa fa-envelope"></span>
-                  Email
+                  Escríbenos
                 </p>
                 <p>
                   free@solo48h.com <br />
