--- a/contact.html
+++ b/contact.html
@@ -73,18 +73,18 @@
                   aria-expanded="false">Mi Cuenta</a>
                 <ul class="dropdown-menu">
                   <li class="nav-item">
-                    <a class="nav-link" href="login.html">Login</a>
+                    <a class="nav-link" href="login.html">Accede</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="register.html">Regístrate</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="tracking-order.html">Tracking</a>
+                    <a class="nav-link" href="tracking-order.html">Seguimiento</a>
                   </li>
                 </ul>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="contact.html">Contáctanos</a>
+                <a class="nav-link" href="contact.html">Contacta</a>
               </li>
             </ul>
 
@@ -112,12 +112,12 @@
     <div class="container h-100">
       <div class="blog-banner">
         <div class="text-center">
-          <h1>Contáctanos</h1>
+          <h1>Contacta</h1>
           <nav aria-label="breadcrumb" class="banner-breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="#">Inicio</a></li>
               <li class="breadcrumb-item active" aria-current="page">
-                Contáctanos
+                Contacta
               </li>
             </ol>
           </nav>
@@ -161,24 +161,24 @@
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-home"></i></span>
             <div class="media-body">
-              <h3>California United States</h3>
-              <p>Santa monica bullevard</p>
+              <h3>Barcelona </h3>
+              <p>España</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-headphone"></i></span>
             <div class="media-body">
-              <h3><a href="tel:454545654">00 (440) 9865 562</a></h3>
-              <p>Mon to Fri 9am to 6pm</p>
+              <h3><a href="tel:454545654"> +123 456 7890</a></h3>
+              <p>De Lunes a Viernes de 9:00 a 18:00</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-email"></i></span>
             <div class="media-body">
               <h3>
-                <a href="mailto:support@colorlib.com">support@colorlib.com</a>
+                <a href="mailto:support@colorlib.com">free@solo48h.com</a>
               </h3>
-              <p>Send us your query anytime!</p>
+              <p>Envíanos tu consulta en cualquier momento!</p>
             </div>
           </div>
         </div>
@@ -188,25 +188,25 @@
             <div class="row">
               <div class="col-lg-5">
                 <div class="form-group">
-                  <input class="form-control" name="name" id="name" type="text" placeholder="Enter your name" />
+                  <input class="form-control" name="name" id="name" type="text" placeholder="Tu Nombre" />
                 </div>
                 <div class="form-group">
-                  <input class="form-control" name="email" id="email" type="email" placeholder="Enter email address" />
+                  <input class="form-control" name="email" id="email" type="email" placeholder="Tu email " />
                 </div>
                 <div class="form-group">
-                  <input class="form-control" name="subject" id="subject" type="text" placeholder="Enter Subject" />
+                  <input class="form-control" name="subject" id="subject" type="text" placeholder="Asunto" />
                 </div>
               </div>
               <div class="col-lg-7">
                 <div class="form-group">
                   <textarea class="form-control different-control w-100" name="message" id="message" cols="30" rows="5"
-                    placeholder="Enter Message"></textarea>
+                    placeholder="Mensaje:"></textarea>
                 </div>
               </div>
             </div>
             <div class="form-group text-center text-md-right mt-3">
               <button type="submit" class="button button--active button-contactForm">
-                Send Message
+               Enviar Mensaje
               </button>
             </div>
           </form>
@@ -225,13 +225,12 @@
             <div class="single-footer-widget tp_widgets">
               <h4 class="footer_title large_title">Nuestra Misión</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Recusandae mollitia quidem laboriosam quod doloribus nihil
-                molestias inventore veritatis consequatur eveniet, vitae iste!
+                Estamos comprometidos en mejorar la vida de nuestros clientes, empleados y comunidad.
+                Ofreciendo productos excepcionales a precios atractivos, al mismo tiempo de ser líderes en la forma
+                de hacer negocios socialmente responsables.
               </p>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Architecto, expedita?
+                Ofrecer al cliente el mejor servicio, variedad, calidad y precio.
               </p>
             </div>
           </div>
@@ -263,17 +262,17 @@
           </div>
           <div class="offset-lg-1 col-lg-3 col-md-6 col-sm-6">
             <div class="single-footer-widget tp_widgets">
-              <h4 class="footer_title">Contáctanos</h4>
+              <h4 class="footer_title">Ponte En Contacto...</h4>
               <div class="ml-40">
                 <p class="sm-head">
                   <span class="fa fa-location-arrow"></span>
-                  Oficina
+                  Ven a visitarnos
                 </p>
                 <p>C/ del Perú, 52, 08018 Barcelona</p>
 
                 <p class="sm-head">
                   <span class="fa fa-phone"></span>
-                  Teléfono
+                  Llámanos y estaremos encantados de escucharte
                 </p>
                 <p>
                   +123 456 7890 <br />
@@ -282,7 +281,7 @@
 
                 <p class="sm-head">
                   <span class="fa fa-envelope"></span>
-                  Email
+                  Escríbenos
                 </p>
                 <p>
                   free@solo48h.com <br />
